Refactoring website to master branch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Welcome to Atomic AI</title>
-		<link href="./assets/style/style.css" rel="stylesheet">
+		<link href="./public/assets/style/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="font-awesome-6.5.1/css/font-awesome.min.css">
 	</head>
 	<body>
@@ -27,7 +27,7 @@
 			</div>
 		</nav>	
 		<section id="home" class="about">
-			<img src="../img/atomicai.png" alt="">
+			<img src="./img/atomicai.png" alt="">
 			<div class="about-us">
 				<h1>What is this?</h1>
 				<p>
@@ -64,6 +64,6 @@
 				commodo ex non excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
 			</p>
 		</section>
-		<script src="./assets/js/nav-script.js"></script>
+		<script src="./public/assets/js/nav-script.js"></script>
 	</body>
 </html>
