Removing dummy text from index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Welcome to Atomic AI</title>
+		<title>Atomic AI Labs</title>
 		<link href="./public/assets/style/style.css" rel="stylesheet">
-		<link rel="stylesheet" href="font-awesome-6.5.1/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 	</head>
 	<body>
 		<nav class="navbar">
@@ -42,26 +42,27 @@
 				<h1>Development</h1>
 			</div>
 			<p class="text">
-				All of our tools are written in Python, this is not a convention, C++ and JS are languages that
-				we appreciate. Everything is being documented at our github, in the organization page you will find
-				our projects, goals and some other information.
+				All our tools are crafted using Python. However, it's essential to note that our affinity extends
+				beyond convention; we have a deep appreciation for languages such as C++ and JS. In our Github
+				organization page you'll find all of the documents that are necessary to understand our goals.
 				<br>
-				Since this is an open source project, feel free to help and contribute, any tip is welcome!
-				<i class="fa-brands fa-github"></i>
-
+				Since this is an open-source initiative, we warmly invite you to contribute. Your assistance is highly
+				valued, any suggestions or tips are more than welcome!
+				<br>
 			</p>
+			<div class="github-org">	
+				<a href="https://github.com/labsatomicai" target="_blank"><i class="fa-brands fa-github"></i></a>
+				<p>Take a look buddy!</p>
+			</div>
 		</section>
 		<section id="contact" class="contact">
 			<div class="title">
 				<h1>Contact</h1>
 			</div>
 			<p class="text">
-				Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi 
-				Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud 
-				nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia pariatur 
-				ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat 
-				officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit 
-				commodo ex non excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
+				We appreciate your interest and welcome any inquiries or feedback you may have. Whether you
+				want to inquire about our projects, explore opportunities, or maybe, share your thoughts. You can
+				reach out to us trough <span>marcot.dns@gmail.com</span>. Your participation is vital for Atomic AI growth.
 			</p>
 		</section>
 		<script src="./public/assets/js/nav-script.js"></script>
