Adding minimal footer

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 				reach out to us trough <span>marcot.dns@gmail.com</span>. Your participation is vital for Atomic AI growth.
 			</p>
 		</section>
+		<footer>
+			<h1>Atomic AI</h1>
+			<p>This website is brought to you by Atomic AI members</p>
+		</footer>
 		<script src="./public/assets/js/nav-script.js"></script>
 	</body>
 </html>
