--- a/index.html
+++ b/index.html
@@ -1,74 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<title>quantumflops</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Atomic AI Labs</title>
 		<link href="./public/assets/style/style.css" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		<script src="https://unpkg.com/feather-icons"></script>
 	</head>
 	<body>
-		<nav class="navbar">
-			<div>
-				<span></span>
+		<div class="title-and-desc">
+			<div>	
+				<img src="./public/img/quantumflops_logo.png" height="130" alt="">
 			</div>
-			<a href="#" class="toggle-button">
-				<span class="bar"></span>
-				<span class="bar"></span>
-				<span class="bar"></span>
-			</a>
-			<div class="nav-links">
-				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#development">Development</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
+			<div class="d-flex flex-column justify-content-center align-items-center">
+				<h1 class="title text-white">quantumflops</h1>
+				<p class="desc text-white">Elevating software excellence with A.I</p>
 			</div>
-		</nav>	
-		<section id="home" class="about">
-			<img src="./img/atomicai.png" alt="">
-			<div class="about-us">
-				<h1>What is this?</h1>
-				<p>
-					AtomicAI is an independent AI project, it focus on open source software, scalability and quality.
-					Our goal is to developt multiple tools that relies on artificial intelligence to provide the most
-					accurate and functional predictions.
-				</p>
-			</div>
-		</section>
-		<section id="development" class="development">
-			<div class="title">
-				<h1>Development</h1>
-			</div>
-			<p class="text">
-				All our tools are crafted using Python. However, it's essential to note that our affinity extends
-				beyond convention; we have a deep appreciation for languages such as C++ and JS. In our Github
-				organization page you'll find all of the documents that are necessary to understand our goals.
-				<br>
-				Since this is an open-source initiative, we warmly invite you to contribute. Your assistance is highly
-				valued, any suggestions or tips are more than welcome!
-				<br>
-			</p>
-			<div class="github-org">	
-				<a href="https://github.com/labsatomicai" target="_blank"><i class="fa-brands fa-github"></i></a>
-				<p>Take a look buddy!</p>
-			</div>
-		</section>
-		<section id="contact" class="contact">
-			<div class="title">
-				<h1>Contact</h1>
-			</div>
-			<p class="text">
-				We appreciate your interest and welcome any inquiries or feedback you may have. Whether you
-				want to inquire about our projects, explore opportunities, or maybe, share your thoughts. You can
-				reach out to us trough <span>marcot.dns@gmail.com</span>. Your participation is vital for Atomic AI growth.
-			</p>
-		</section>
-		<footer>
-			<h1>Atomic AI</h1>
-			<p>This website is brought to you by Atomic AI members</p>
-		</footer>
-		<script src="./public/assets/js/nav-script.js"></script>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		<script>
+			feather.replace();
+		</script>
 	</body>
 </html>
