Updating organization name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<title>perceptrawave - software excellence</title>
+	<title>machdata - software excellence</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="./public/assets/style/style.css" rel="stylesheet">
@@ -11,21 +11,21 @@
   <body>
 	<div class="title-and-desc">
 	  <div class="d-flex flex-column justify-content-center align-items-center project-info">
-		<img class="mx-3" src="./public/img/perceptrawave.png" height="250" alt="">
-        <h1 class="title text-white">perceptrawave</h1>
+		<img class="mx-3" src="./public/img/machdata.png" height="250" alt="">
+        <h1 class="title text-white">machdata</h1>
         <p class="desc text-white">Elevating software excellence with A.I</p>
 	  </div>
 	</div>
     <div>
-      <h2 class="pt-5 px-5 mx-5 pb-1 py-5">About perceptrawave</h2>
+      <h2 class="pt-5 px-5 mx-5 pb-1 py-5">About machdata</h2>
       <div class="d-flex justify-content-center align-items-center">
         <p class="text-break text-justify px-5 mx-5">
-          Welcome to perceptrawave, where state of the art innovation meets the very front of man-made brainpower.
+          Welcome to machdata, where state of the art innovation meets the very front of man-made brainpower.
           We are commited to hoisting programming greatness through creative arrangements in the filed of machine learning
           and AI.
           Our main goal is to provide good quality applications for differents niches and people, in that way,
           we can demonstrate the power of brain organizations and high level calculations.
-          At perceptrawave, we put stock in pushing past the limites of what's conceivable, driving advancement, and molding
+          At machdata, we put stock in pushing past the limites of what's conceivable, driving advancement, and molding
           the present.
         </p
       </div>
@@ -34,11 +34,11 @@
       <h2 class="pt-5 px-5 mx-5 pb-1 py-5">Development</h2>
       <div class="d-flex justify-content-center align-items-center">
         <p class="text-break px-5 mx-5">
-          In our quest for technological excellence, the development team at perceptrawave is committed to crafting
+          In our quest for technological excellence, the development team at machdata is committed to crafting
           innovative solutions that harness the power of artificial intelligence. Our flagship project, Neurahub, is a
           testament to our dedication to creating cutting-edge
           applications that push the boundaries of what&#39s possible.<br>
-          At perceptrawave, we embrace a cooperative soul, inviting patrons keen on Python, C++, Go, and JavaScript.
+          At machdata, we embrace a cooperative soul, inviting patrons keen on Python, C++, Go, and JavaScript.
           In the event that you share our enthusiasm for investigating the vast conceivable outcomes of computer based
           intelligence and pushing the wildernesses of programming improvement, there&#39s a spot for you in our
           excursion of mechanical development.
@@ -52,7 +52,7 @@
           We&#39re thrilled to connect with you! If you have any questions, feedback, or would like to join our community,
           feel free to reach out to us on GitHub. Our open-source projects, including neurahub, are open for
           collaboration and contribution.<br>
-          GitHub: <a href="https://github.com/perceptrawave" target="_blank" class="text-decoration-none">perceptrawave GitHub</a><br>
+          GitHub: <a href="https://github.com/machdata" target="_blank" class="text-decoration-none">machdata GitHub</a><br>
         </p>
       </div>
     </div>
@@ -60,7 +60,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <p>&copy; <span id="current_year"></span> perceptrawave. All rights reserved. (This is not a company)</p>
+            <p>&copy; <span id="current_year"></span> machdata. All rights reserved. (This is not a company)</p>
           </div>
         </div>
       </div>
