Refactoring website with new name

--- a/index.html
+++ b/index.html
@@ -1,74 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
 	<title>machdata - software excellence</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="./public/assets/style/style.css" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="https://unpkg.com/feather-icons"></script>
-  </head>
-  <body>
-	<div class="title-and-desc">
-	  <div class="d-flex flex-column justify-content-center align-items-center project-info">
-		<img class="mx-3" src="./public/img/machdata.png" height="250" alt="">
-        <h1 class="title text-white">machdata</h1>
-        <p class="desc text-white">Elevating software excellence with A.I</p>
-	  </div>
+    </head>
+    <body>
+	<div class="banner">
+	    <nav class="navbar">
+		<h1>MACH</h1>
+		<ul>
+		    <li>
+			<a href="#">About</a>
+			<a href="#">Development</a>
+			<a href="#">Contact</a>
+		    </li>
+		</ul>
+	    </nav>
 	</div>
-    <div>
-      <h2 class="pt-5 px-5 mx-5 pb-1 py-5">About machdata</h2>
-      <div class="d-flex justify-content-center align-items-center">
-        <p class="text-break text-justify px-5 mx-5">
-          Welcome to machdata, where state of the art innovation meets the very front of man-made brainpower.
-          We are commited to hoisting programming greatness through creative arrangements in the filed of machine learning
-          and AI.
-          Our main goal is to provide good quality applications for differents niches and people, in that way,
-          we can demonstrate the power of brain organizations and high level calculations.
-          At machdata, we put stock in pushing past the limites of what's conceivable, driving advancement, and molding
-          the present.
-        </p
-      </div>
-    </div>
-    <div>
-      <h2 class="pt-5 px-5 mx-5 pb-1 py-5">Development</h2>
-      <div class="d-flex justify-content-center align-items-center">
-        <p class="text-break px-5 mx-5">
-          In our quest for technological excellence, the development team at machdata is committed to crafting
-          innovative solutions that harness the power of artificial intelligence. Our flagship project, Neurahub, is a
-          testament to our dedication to creating cutting-edge
-          applications that push the boundaries of what&#39s possible.<br>
-          At machdata, we embrace a cooperative soul, inviting patrons keen on Python, C++, Go, and JavaScript.
-          In the event that you share our enthusiasm for investigating the vast conceivable outcomes of computer based
-          intelligence and pushing the wildernesses of programming improvement, there&#39s a spot for you in our
-          excursion of mechanical development.
-        </p>
-      </div>
-    </div>
-    <div>
-      <h2 class="pt-5 px-5 mx-5 pb-1 py-5">Contact</h2>
-      <div class="d-flex justify-content-center align-items-center">
-        <p class="text-break px-5 mx-5">
-          We&#39re thrilled to connect with you! If you have any questions, feedback, or would like to join our community,
-          feel free to reach out to us on GitHub. Our open-source projects, including neurahub, are open for
-          collaboration and contribution.<br>
-          GitHub: <a href="https://github.com/machdata" target="_blank" class="text-decoration-none">machdata GitHub</a><br>
-        </p>
-      </div>
-    </div>
-    <footer class="py-4 text-center" style="background-color: #f2f2f2; color: #212121;">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <p>&copy; <span id="current_year"></span> machdata. All rights reserved. (This is not a company)</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-	<script>
-      document.getElementById('current_year').innerText = new Date().getFullYear();
-	  feather.replace();
-	</script>
-  </body>
+	<div class="quote">
+	    <span>machdata brings out the best of machine learning</span>
+	</div>
+	<div class="objectives-wrapper">
+	    <div class="objective">
+		<h1>from education to the kitchen</h1>
+		<p>
+		    machdata's objective is to provide technological solutions integrated with machine learning to
+		    different niches.
+		</p>
+	    </div>
+	</div>
+	<script>feather.replace();</script>
+    </body>
 </html>
