Fixing some styling, add new sections to the website

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 			<a href="#">About</a>
 			<a href="#">Development</a>
 			<a href="#">Contact</a>
-		    </li>
-		</ul>
 	    </nav>
 	</div>
 	<div class="quote">
@@ -25,11 +23,26 @@
 	</div>
 	<div class="objectives-wrapper">
 	    <div class="objective">
-		<h1>from education to the kitchen</h1>
+		<h1>machine learning to the world</h1>
 		<p>
 		    machdata's objective is to provide technological solutions integrated with machine learning to
 		    different niches.
 		</p>
+	    </div>
+	</div>
+	<div class="link-section">
+	    <a class="link-button" href="">VIEW ALL PROJECTS</a>
+	</div>
+	<div class="development-section">
+	    <div class="slogan">
+		<h1>Help us build an new future</h1>
+	    </div>
+	    <div class="join">
+		<h1>neurahub, research, tech, marketing</h1>
+		<p>We're seeking for talented individuals, that are passionate to learn, can work independently and have a constant desire to make a huge impact.</p>
+	    </div>
+	    <div class="link-section">
+		<a class="link-button" href="">WORK AT MACHDATA</a>
 	    </div>
 	</div>
 	<script>feather.replace();</script>
