Fixing some minor style bugs; adding links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	    </div>
 	</div>
 	<div class="link-section">
-	    <a class="link-button" href="">VIEW ALL PROJECTS</a>
+	    <a class="link-button" href="https://github.com/orgs/mach-data/repositories" target="_blank">VIEW ALL PROJECTS</a>
 	</div>
 	<div class="development-section">
 	    <div class="slogan">
@@ -42,9 +42,23 @@
 		<p>We're seeking for talented individuals, that are passionate to learn, can work independently and have a constant desire to make a huge impact.</p>
 	    </div>
 	    <div class="link-section">
-		<a class="link-button" href="">WORK AT MACHDATA</a>
+		<a class="link-button" href="mailto:marcot.dns@gmail.com">WORK AT MACHDATA</a>
 	    </div>
 	</div>
+	<footer>
+	    <div class="footer-info">
+		<span>Stay connected</span>
+		<ul>
+		    <li>
+			<a href="https://github.com/mach-data">Github</a>
+		    </li>
+		    <li>
+			<a href="mailto:marcot.dns@gmail.com">Contact</a>
+		    </li>
+		</ul>
+		<p>@mach-data</p>
+	    </div>
+	</footer>
 	<script>feather.replace();</script>
     </body>
 </html>
